# setup_config

./: Dockerfile  Dockerfile_compbio  Dockerfile_main  README.md  automatic_mount_aws.sh  aws_mount_script.sh  setup.md  setup_aws.md  template.ipynb
Docker/: Dockerfile_compbio  Dockerfile_python
Linux/: .bash_aliases  .bash_completion  .bashrc  .inputrc  .profile  .vimrc  STARTUP_INSTALL.sh  pyproject.toml
Linux/.local/install_setup/: STARTUP_INSTALL.sh  home_mount_startup.sh  linux_software_startup.sh  python_software_startup.sh  setup_services_startup.sh
Linux/.local/systemd_files/: aws_mount_script.service.template  startup_script.service.template
Linux/.ssl/: openssl.cnf
Linux/.vim/: .netrwhist
Linux/.vim/ftplugin/: nextflow.vim
python_project/: .flake8  .gitignore  README.md  manual_setup.md  pyproject.toml
startup_scripts/creation/: manual_setup.md
startup_scripts/start/: aws_mount_script.sh  setup.md
systemd_files/: aws_mount_script.service.template
