[tool.poetry]
name = "setup-workspace"
version = "0.1.0"
description = "Initial setup for Poetry. Generate a pyproject.toml file that is used to install packages in the Docker image."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
rpy2 = "^3.5.7"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
